styling my blanch

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>Foool Express</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        p{
+            color: red;
+            size: 32px;
+            text-shadow: black;
+            text-underline-position: blue;
+            text-indent: 1.5;
+        }
+    </style>
    
 </head>
 
